Update ESM build configuration

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ES2022",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "outDir": "dist",
     "rootDir": "server/src",
     "strict": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "esModuleInterop": false,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true
   },
-  "include": ["server/src/**/*"],
+  "include": ["server/src/**/*.ts"],
   "exclude": ["**/*.test.ts", "**/__tests__/**"]
 }
