Enforce ESM build settings

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "staff-server",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js"
