--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,8 +8,15 @@
     "strict": true,
     "esModuleInterop": false,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "sourceMap": false,
+    "declaration": false
   },
   "include": ["server/src/**/*.ts"],
-  "exclude": ["**/*.test.ts", "**/__tests__/**"]
+  "exclude": [
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "**/__tests__/**",
+    "**/__mocks__/**"
+  ]
 }
