--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,18 +1,13 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "ES2022",
+    "outDir": "dist",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "outDir": "dist",
+    "target": "ES2022",
     "rootDir": "server/src",
-    "strict": true,
-    "esModuleInterop": false,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "noEmitOnError": true
   },
-  "include": [
-    "server/src/**/*.ts"
-  ],
   "exclude": [
     "**/__tests__/**",
     "**/*.test.ts",
