Configure ESM build and test tooling

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,16 +1,16 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "outDir": "dist",
-    "rootDir": "server/src",
-    "strict": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "noEmit": false,
+    "declaration": false,
+    "sourceMap": false
   },
   "exclude": [
-    "**/__tests__/**",
-    "**/*.test.ts"
+    "server/src/__tests__/**",
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "tests",
+    "dist",
+    "node_modules"
   ]
 }
