--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -3,18 +3,24 @@
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "rootDir": "src",
-    "outDir": "dist",
+    "lib": ["ES2022"],
+    "rootDir": "./src",
+    "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "types": ["node"]
   },
   "include": ["src/**/*.ts"],
   "exclude": [
     "**/*.test.ts",
+    "**/*.spec.ts",
     "**/__tests__/**",
+    "scripts/**",
+    "simulation/**",
+    "**/*.config.ts",
     "drizzle.config.ts",
-    "simulation/**"
+    "config/**"
   ]
 }
