--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "../dist",
+    "outDir": "./dist",
     "resolveJsonModule": true,
     "types": ["node"],
     "noEmitOnError": true
