--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,16 +1,3 @@
 {
-  "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "noEmit": false,
-    "declaration": false,
-    "sourceMap": false
-  },
-  "exclude": [
-    "server/src/__tests__/**",
-    "**/*.test.ts",
-    "**/*.spec.ts",
-    "tests",
-    "dist",
-    "node_modules"
-  ]
+  "extends": "./server/tsconfig.build.json"
 }
