--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,26 +1,23 @@
 {
   "compilerOptions": {
     "target": "ES2022",
+    "lib": ["ES2022"],
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "lib": ["ES2022"],
     "rootDir": "./src",
     "outDir": "./dist",
-    "strict": true,
+    "types": ["node"],
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": false,
     "skipLibCheck": true,
-    "types": ["node"]
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*"],
   "exclude": [
     "**/*.test.ts",
-    "**/*.spec.ts",
     "**/__tests__/**",
-    "scripts/**",
-    "simulation/**",
-    "**/*.config.ts",
-    "drizzle.config.ts",
-    "config/**"
+    "src/testUtils/**",
+    "src/simulation/**"
   ]
 }
