--- a/server/package.json
+++ b/server/package.json
@@ -3,24 +3,20 @@
   "version": "1.0.0",
   "private": true,
   "type": "commonjs",
-  "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "drizzle-orm": "^0.30.10",
-    "pg": "^8.11.5",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "drizzle-orm": "0.30.10",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "8.16.3"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.30",
     "typescript": "^5.4.5"
   }
 }
