Fix CI build and Azure deployment

--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -7,11 +7,15 @@ on:
 
 permissions:
   contents: read
-  id-token: write   # REQUIRED — do not remove
+  id-token: write
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      id-token: write
 
     steps:
       - name: Checkout
@@ -21,16 +25,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
+          cache-dependency-path: server/package-lock.json
 
       - name: Install dependencies
-        run: |
-          cd server
-          npm install
+        working-directory: server
+        run: npm ci
 
       - name: Build server
-        run: |
-          cd server
-          npm run build
+        working-directory: server
+        run: npm run build
 
       - name: Azure Login (OIDC)
         uses: azure/login@v2
