--- a/server/package.json
+++ b/server/package.json
@@ -2,25 +2,34 @@
   "name": "staff-server",
   "version": "1.0.0",
   "private": true,
-  "type": "commonjs",
-
+  "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/index.js"
+    "start": "node server/dist/index.js",
+    "test": "jest --config jest.config.cjs --runInBand",
+    "typecheck:tests": "tsc -p tsconfig.test.json --noEmit"
   },
-
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "drizzle-orm": "^0.30.10",
-    "pg": "^8.11.3",
-    "express": "^4.19.2",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "drizzle-orm": "^0.45.1",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2"
   },
-
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/node": "^20.11.5",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6"
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.11.30",
+    "@types/pg": "^8.11.10",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.4.5"
   }
 }
