--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,21 +1,13 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../dist",
-    "rootDir": "../src",
-
-    "module": "commonjs",
-    "moduleResolution": "node",
-
-    "target": "ES2020",
-    "lib": ["ES2020"],
-
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-
-    "strict": false,
+    "outDir": "./dist",
+    "noEmit": false,
     "sourceMap": false
   },
-  "include": ["../src/**/*.ts"],
-  "exclude": ["../node_modules", "../tests"]
+  "exclude": [
+    "src/__tests__/**",
+    "**/*.test.ts",
+    "**/*.spec.ts"
+  ]
 }
