--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -1,9 +1,9 @@
-name: Build and Deploy Staff-Server to Azure
+name: Staff Server CI / CD
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
@@ -17,33 +17,22 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+          cache: "npm"
 
-      # 🔑 THIS IS THE CRITICAL FIX
-      # We MUST install runtime deps so pg exists at runtime
-      - name: Install dependencies (runtime + dev)
-        run: npm install
+      # ✅ THIS IS THE FIX — runtime deps are installed
+      - name: Install dependencies (production)
+        run: npm ci --omit=dev
 
       - name: Build TypeScript
         run: npm run build
 
-      # Ensure dist + node_modules are packaged
-      - name: Prepare deployment artifact
+      - name: Zip artifact for Azure
         run: |
-          mkdir deploy
-          cp -R dist deploy/dist
-          cp -R node_modules deploy/node_modules
-          cp package.json deploy/package.json
-          cp package-lock.json deploy/package-lock.json
+          zip -r release.zip dist node_modules package.json package-lock.json
 
-      - name: Zip artifact
-        run: |
-          cd deploy
-          zip -r ../app.zip .
-
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v3
+      - name: Deploy to Azure App Service
+        uses: azure/webapps-deploy@v2
         with:
           app-name: boreal-staff-server
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: app.zip
+          package: release.zip
