--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -1,24 +1,45 @@
-- name: Install dependencies
-  run: npm ci
+name: Staff Server CI / CD
 
-- name: Build TypeScript
-  run: npm run build
+on:
+  push:
+    branches: [ main ]
 
-- name: Prepare deploy folder
-  run: |
-    rm -rf deploy
-    mkdir deploy
-    cp -r dist deploy/
-    cp package.json package-lock.json deploy/
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
 
-- name: Zip deploy folder
-  run: |
-    cd deploy
-    zip -r ../deploy.zip .
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-- name: Deploy to Azure App Service
-  uses: azure/webapps-deploy@v3
-  with:
-    app-name: boreal-staff-server
-    publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-    package: deploy.zip
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: Install dependencies (PROD ONLY)
+        run: npm ci --omit=dev
+
+      - name: Build TypeScript
+        run: npm run build
+
+      - name: Prepare deploy package
+        run: |
+          rm -rf deploy
+          mkdir deploy
+          cp -r dist deploy/
+          cp -r node_modules deploy/
+          cp package.json package-lock.json deploy/
+
+      - name: Zip deploy package
+        run: |
+          cd deploy
+          zip -r ../deploy.zip .
+
+      - name: Deploy to Azure App Service
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: boreal-staff-server
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: deploy.zip
