--- a/package.json
+++ b/package.json
@@ -3,34 +3,32 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "engines": {
-    "node": ">=20"
-  },
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
-    "start": "node server/dist/index.js",
-    "test": "jest --config jest.config.cjs --runInBand",
-    "typecheck:tests": "tsc -p tsconfig.test.json --noEmit"
+    "dev": "tsx watch server/src/index.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/server/src/index.js"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.3",
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "drizzle-orm": "^0.45.1",
-    "express": "^4.21.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.11.5",
+    "twilio": "^5.4.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.25",
-    "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.11.30",
-    "@types/pg": "^8.16.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.4.5"
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.14.9",
+    "@types/pg": "^8.11.6",
+    "@types/uuid": "^9.0.8",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.4"
   }
 }
