--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.45.1",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
