--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,24 +3,12 @@
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "lib": ["ES2022"],
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "allowSyntheticDefaultImports": true,
+    "rootDir": "src",
+    "outDir": "dist",
+    "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "types": ["node"],
-    "noEmitOnError": true
+    "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": [
-    "src/__tests__/**",
-    "**/*.test.ts",
-    "**/*.spec.ts",
-    "dist",
-    "node_modules"
-  ]
+  "include": ["src"]
 }
