--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "type": "module",
   "scripts": {
     "build": "tsc -p server/tsconfig.json",
-    "start": "node server/dist/index.js"
+    "start": "node dist/server/src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.5",
+    "twilio": "^4.20.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/morgan": "^1.9.9",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
+    "@types/pg": "^8.11.6",
     "typescript": "^5.4.5"
   }
 }
