Ensure API routes mount and fix build output

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,12 +3,13 @@
     "target": "ES2022",
     "module": "Node16",
     "moduleResolution": "Node16",
-    "outDir": "dist",
-    "rootDir": ".",
+    "outDir": "../dist",
+    "rootDir": "..",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["server/src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["../dist"]
 }
