--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "staff-server",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
-    "build": "tsc -p server/tsconfig.json",
-    "start": "node dist/server/src/index.js"
+    "build": "tsc -p server/tsconfig.build.json",
+    "start": "node server/dist/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
