--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
-    "outDir": "server/dist",
-    "rootDir": "server/src",
+    "outDir": "dist",
+    "rootDir": "src",
     "module": "commonjs",
     "target": "es2022",
     "esModuleInterop": true,
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
-  "include": ["server/src"]
+  "include": ["src"]
 }
