--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -1,27 +1,32 @@
-name: Staff Server CI/CD
+- name: Use Node
+  uses: actions/setup-node@v4
+  with:
+    node-version: "20"
+    cache: "npm"
 
-on:
-  push:
-    branches:
-      - main
+- name: Install
+  run: npm ci
 
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+- name: Build
+  run: npm run build
 
-    steps:
-      - uses: actions/checkout@v4
+- name: Sanity check build output exists
+  run: |
+    test -f server/dist/index.js
+    echo "OK: server/dist/index.js exists"
 
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+- name: Create deploy package (compiled app + deps)
+  run: |
+    rm -f package.zip
+    zip -r package.zip \
+      server/dist \
+      package.json \
+      package-lock.json \
+      node_modules
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build TypeScript
-        run: npm run build
-
-      - name: Deploy to Azure App Service
-        run: echo "Deploy step placeholder"
+- name: Deploy to Azure Web App
+  uses: azure/webapps-deploy@v3
+  with:
+    app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
+    publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+    package: package.zip
