--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -1,32 +1,45 @@
-- name: Use Node
-  uses: actions/setup-node@v4
-  with:
-    node-version: "20"
-    cache: "npm"
+name: build-and-package
 
-- name: Install
-  run: npm ci
+on:
+  push:
+    branches:
+      - main
 
-- name: Build
-  run: npm run build
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-- name: Sanity check build output exists
-  run: |
-    test -f server/dist/index.js
-    echo "OK: server/dist/index.js exists"
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-- name: Create deploy package (compiled app + deps)
-  run: |
-    rm -f package.zip
-    zip -r package.zip \
-      server/dist \
-      package.json \
-      package-lock.json \
-      node_modules
+      - name: Use Node 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
 
-- name: Deploy to Azure Web App
-  uses: azure/webapps-deploy@v3
-  with:
-    app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-    publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-    package: package.zip
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build server
+        run: npm run build
+
+      - name: Sanity check build output
+        run: |
+          test -f server/dist/index.js
+          echo "OK: server/dist/index.js exists"
+
+      - name: Create deploy package
+        run: |
+          rm -f package.zip
+          zip -r package.zip \
+            server/dist \
+            node_modules \
+            package.json
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: staff-server
+          path: package.zip
