--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,12 +1,21 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "module": "commonjs",
-    "target": "es2022",
-    "esModuleInterop": true,
+
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "NodeNext",
+
+    "esModuleInterop": false,
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+
+    "declaration": false,
+    "sourceMap": false
   },
-  "include": ["src"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
