--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -5,16 +5,14 @@
     "rootDir": "src",
 
     "target": "ES2022",
-    "module": "ESNext",
+    "module": "NodeNext",
     "moduleResolution": "NodeNext",
 
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-
-    "declaration": false,
-    "sourceMap": false
+    "resolveJsonModule": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
