--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -3,17 +3,13 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true
+    "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*.ts"]
 }
