--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "start": "node server/dist/index.js",
+    "start": "node dist/index.js",
     "test": "jest --config jest.config.cjs --runInBand",
     "typecheck:tests": "tsc -p tsconfig.test.json --noEmit"
   },
@@ -26,11 +26,6 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.30",
-    "@types/pg": "^8.11.10",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.4.5"
+    "@types/jsonwebtoken": "^9.0.6"
   }
 }
