--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,8 @@
     "node": ">=20"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/index.js",
-    "test": "jest --config jest.config.cjs --runInBand",
-    "typecheck:tests": "tsc -p tsconfig.test.json --noEmit"
+    "build": "tsc -p server/tsconfig.build.json",
+    "start": "node server/dist/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -25,7 +23,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.6"
+    "@types/jsonwebtoken": "^9.0.6",
+    "typescript": "^5.4.0"
   }
 }
