--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,6 @@
   "name": "staff-server",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "engines": {
     "node": ">=20"
   },
@@ -17,13 +16,13 @@
     "drizzle-orm": "^0.45.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "twilio": "^4.23.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "typescript": "^5.4.0"
+    "@types/jsonwebtoken": "^9.0.6"
   }
 }
