--- a/server/package.json
+++ b/server/package.json
@@ -2,27 +2,16 @@
   "name": "staff-server",
   "version": "1.0.0",
   "private": true,
-  "engines": {
-    "node": ">=20"
-  },
+  "type": "module",
   "scripts": {
-    "build": "tsc -p server/tsconfig.build.json",
-    "start": "node server/dist/index.js"
+    "build": "tsc -p tsconfig.build.json",
+    "start": "node dist/index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "drizzle-orm": "^0.45.1",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1",
-    "twilio": "^4.23.0"
+    "express": "^4.19.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6"
+    "typescript": "^5.4.5"
   }
 }
