--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,14 +1,10 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "outDir": "server/dist",
-    "rootDir": "server/src",
-    "strict": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "noEmit": false
   },
-  "include": ["server/src/**/*"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["dist", "node_modules"]
 }
