--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,10 +1,19 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "noEmit": false
+    "target": "ES2022",
+    "module": "ES2022",
+    "moduleResolution": "node16",
+    "rootDir": "src",
+    "outDir": "dist",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node"]
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["dist", "node_modules"]
+  "include": [
+    "server/src/**/*.ts",
+    "server/src/types/**/*.d.ts"
+  ],
+  "exclude": ["server/dist"]
 }
