--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,8 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "module": "Node16",
     "moduleResolution": "Node16",
     "target": "ES2022",
@@ -12,5 +12,5 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "src/types/**/*.d.ts"],
-  "exclude": ["dist"]
+  "exclude": ["dist", "node_modules"]
 }
