--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,15 +1,13 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "Node16",
-    "moduleResolution": "Node16",
     "outDir": "dist",
     "rootDir": "src",
-    "strict": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "types": ["node"]
+    "module": "Node16",
+    "moduleResolution": "Node16",
+    "target": "ES2022",
+    "declaration": false,
+    "sourceMap": false
   },
   "include": ["src/**/*.ts", "src/types/**/*.d.ts"],
   "exclude": ["dist"]
