--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,14 +1,9 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "outDir": "dist",
     "rootDir": "src",
-    "module": "Node16",
-    "moduleResolution": "Node16",
-    "target": "ES2022",
-    "declaration": false,
-    "sourceMap": false
-  },
-  "include": ["src/**/*.ts", "src/types/**/*.d.ts"],
-  "exclude": ["dist"]
+    "target": "ES2022"
+  }
 }
