--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,22 +1,16 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "declaration": false,
-    "sourceMap": false,
-    "noEmitOnError": true
+    "outDir": "dist",
+    "rootDir": "src",
+    "target": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": false,
+    "skipLibCheck": true
   },
-  "include": [
-    "./src/**/*.ts",
-    "./drizzle.config.ts",
-    "./vitest.config.ts",
-    "./simulation/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
