Normalize server routing and ESM build

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "staff-server",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "build": "tsc -p server/tsconfig.build.json",
     "start": "node server/dist/index.js"
