--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "staff-server",
   "version": "1.0.0",
   "private": true,
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js"
