--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "Node16",
     "moduleResolution": "Node16",
     "outDir": "dist",
-    "rootDir": ".",
+    "rootDir": "server",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -13,6 +13,12 @@
     "allowImportingTsExtensions": false,
     "noEmitOnError": true
   },
-  "include": ["server/src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["server/**/*.ts"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "server/drizzle.config.ts",
+    "server/simulation/**",
+    "server/vitest.config.ts"
+  ]
 }
