fix: align Azure workflow with expected main_boreal-staff-server.yml

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,7 +9,11 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
-    }
-  }
+      "@/*": ["server/src/*"]
+    },
+    "outDir": "dist",
+    "rootDir": "server/src"
+  },
+  "include": ["server/src/**/*.ts"],
+  "exclude": ["dist", "node_modules"]
 }
