--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "build": "tsc -p server/tsconfig.json",
     "start": "node server/dist/index.js"
   },
+  "dependencies": {
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
+  },
   "engines": {
     "node": ">=20"
   }
