Fix Azure build and health endpoint

--- a/.github/workflows/main_boreal-staff-server.yml
+++ b/.github/workflows/main_boreal-staff-server.yml
@@ -25,8 +25,7 @@ jobs:
 
       - name: Zip deployment
         run: |
-          cd server
-          zip -r ../app.zip dist package.json node_modules
+          zip -r app.zip server/dist package.json package-lock.json node_modules
 
       - name: Azure Login
         uses: azure/login@v2
