--- a/package.json
+++ b/package.json
@@ -7,10 +7,23 @@
     "start": "node server/dist/index.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.12.0",
+    "twilio": "^5.1.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.14.5",
+    "@types/pg": "^8.11.6",
+    "typescript": "^5.4.5"
   },
   "engines": {
     "node": ">=20"
