--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/index.js"
+    "start": "node server/dist/index.js"
   },
   "dependencies": {
     "express": "^4.19.2",
