Fix server build paths

--- a/.github/workflows/main_boreal-staff-server.yml
+++ b/.github/workflows/main_boreal-staff-server.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Zip deployment
         run: |
-          zip -r app.zip server/dist package.json package-lock.json node_modules
+          zip -r app.zip server/dist server/package.json server/node_modules
 
       - name: Azure Login
         uses: azure/login@v2
