--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc -p server/tsconfig.json",
+    "build": "tsc -p tsconfig.json",
     "start": "node server/dist/index.js"
   },
   "dependencies": {
