--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,9 @@
 {
   "name": "staff-server",
-  "version": "1.0.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node server/dist/index.js"
-  },
-  "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
-    "typescript": "^5.3.3"
+    "start": "node dist/index.js"
   }
 }
