--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,13 @@
 {
   "name": "staff-server",
-  "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/index.js",
-    "test:runtime": "node dist/index.js & sleep 2 && curl -f http://localhost:8080/"
+    "build": "tsc",
+    "start": "node dist/index.js"
+  },
+  "engines": {
+    "node": ">=20"
   },
   "dependencies": {
     "express": "^4.19.2",
