--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "CommonJS",
+    "module": "ES2022",
     "moduleResolution": "node",
-    "rootDir": "src",
     "outDir": "dist",
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "rootDir": "src",
+    "strict": true
   },
-  "include": ["src"]
+  "include": ["src/**/*.ts"]
 }
