--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "staff-server",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js"
@@ -14,6 +14,8 @@
     "cors": "^2.8.5"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.5",
+    "typescript": "^5.4.5"
   }
 }
