--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ES2022",
+    "module": "CommonJS",
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*"]
 }
